src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-header {
  background-color: white;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.top-right {
  position:absolute;
  top:0;
  left:0;
  margin-left: 20px;
  margin-top: 10px;
}

.menu-header {
  margin-left: 10px;
  text-align: left;
}

.menu-container {
  flex: 1;
  margin-top: 20px;
}

.title {
  text-align: left;
  color : grey;
  margin-left: 10px;
}
.menu-item {
  display: flex;
  flex-direction: row;
  margin-bottom: 50px;
  margin-top: 20px;
  pointer-events: none;
  cursor: default;
  color: black;
  font-size: 20px !important;
  align-items: center;
  margin-right: 150px;
}

.menu-item * {
    text-decoration: none;
}

.icon {
  padding: 0em 1em;
  margin-top: 2px;
}

.icon-align {
  top: 5;
  left: 5;
  position: relative;
}

.date-picker {
    position:relative;
     margin:0 auto;
     clear:left;
     height:auto;
     z-index: 0;
     text-align:center;
 }​

.top-display {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  z-index: 99;
}

.label-text {
  text-align: left;
}

.label-center {
  margin-top: 50%;
}

.radar-screen {
  padding-top: 15px;
}

.form-fields {
    margin-bottom: 30px !important;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

svg text#chk {
    font-family: sans-serif;
    font-size: 50px;
    fill: black;
}

.inner-content {
  width: 100vw;
  height: 100vh;
}

.login {
  margin: 0 auto;
  width: 40%;
  margin-top: 10%;
  padding: 20px 20px 20px 20px;
  background-color: white;
  height: auto;
}

.login-title {
  font-size: 20px;
  margin-bottom: 50px;
}

.login-button {
  width: 100% !important;
  margin-top: 20px !important;
  margin-bottom: 50px !important;
}

.logo-login {
  width: 20%;
  height: 20%;
  margin-bottom: 20px;
}

.logo {
  width: 10em;
  height: 10em;
  margin: 2em 0 0.5em 0;
  float: left;
  display: block;
  margin-right: 100%;
}

.shadow {
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
  0px 1px 1px 0px rgba(0, 0, 0, 0.14),
  0px 2px 1px -1px rgba(0, 0, 0, 0.12);
}

.form-align {
  margin-bottom: 30px;
}

.login-bg {
  background: linear-gradient(to top, white 50%, #1678C2 50%);
  position: fixed;
  width: 100%;
  height: 100%;
}

.signup {
  margin: 0 auto;
  width: 40%;
  margin-top: 2%;
  padding: 20px 20px 20px 20px;
  background-color: white;
  height: auto;
}
.subtext-login {
  font-size: 12px;
  text-align: left !important;
  cursor : pointer;
  margin-right: 20px;
}

.subtext-divider {
  font-size: 12px;
  text-align: left !important;
  cursor : default;
  margin-right: 20px;
}

.login input {
  margin-bottom: 30px  !important;
  display: block;
}

.subject-task-form {
  margin: 0 auto !important;
  width: 40%;
  margin-top: 10%;
  padding: 20px 20px 20px 20px;
  background-color: rgb(233, 233, 233, 0.9);
  height: auto;
  position: fixed;
  top: 30%;
  left: 30%;
  border: 2px;
  border-radius: 15px;
  -moz-border-radius: 15px;
}

.subject-title-container {
  margin-bottom: 20px;
  width: auto;
}

.switch-icon {
  position:absolute;
  top:0;
  right:0;
  cursor:pointer;
}

.login-text {
  text-align: left;
}

.subtext-container {
  display: flex;
  flex-direction: row;
}

.back {
  margin-top: 0px !important;
  text-align:left;
}

.back-container {
  display: flex;
  flex-direction: row;
  cursor: pointer;
}

.back-align {
  top: 4 !important;
}

.plus-button {
  cursor: pointer;
  position: absolute;
  right: 10px;
  bottom: 10px;
}

.history-button {
  cursor: pointer;
  position: absolute;
  left: 10px;
  bottom: 10px;
}


@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

